Fix the tree wiver summary ussage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <main class="app__main">
   <app-tree-viewer class="app__tree-viewer"></app-tree-viewer>
+  <app-tree-selection-summary class="app__tree-selection-summary"></app-tree-selection-summary>
 </main>
