--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,15 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    flex-direction: column;
     max-width: 324px;
     margin: 40px auto 0;
     padding: 24px;
     background-color: var(--color-surface);
+  }
+
+  &__tree-selection-summary {
+    display: block;
+    width: 100%;
   }
 }
