--- a/src/app/features/tree-viewer/components/tree-viewer/tree-viewer.component.html
+++ b/src/app/features/tree-viewer/components/tree-viewer/tree-viewer.component.html
@@ -1,23 +1,21 @@
-<ng-container *ngIf="!loading() && !error()">
-  <section class="tree-viewer" role="tree" aria-label="File tree">
-    <ng-container *ngFor="let node of visibleNodes(); trackBy: trackByNodeId">
-      <app-tree-folder
-        *ngIf="isFolder(node)"
-        [folder]="node"
-        (folderToggle)="onFolderToggle()"
-        (folderSelect)="onFolderSelect($event)"
-      >
-      </app-tree-folder>
+<section *ngIf="!loading() && !error()" class="tree-viewer">
+  <ng-container *ngFor="let node of visibleNodes(); trackBy: trackByNodeId">
+    <app-tree-folder
+      *ngIf="isFolder(node)"
+      [folder]="node"
+      (folderToggle)="onFolderToggle()"
+      (folderSelect)="onFolderSelect($event)"
+    >
+    </app-tree-folder>
 
-      <app-tree-item
-        *ngIf="isItem(node)"
-        [item]="node"
-        (itemSelect)="onItemSelect($event)"
-      >
-      </app-tree-item>
-    </ng-container>
-  </section>
-</ng-container>
+    <app-tree-item
+      *ngIf="isItem(node)"
+      [item]="node"
+      (itemSelect)="onItemSelect($event)"
+    >
+    </app-tree-item>
+  </ng-container>
+</section>
 
 <app-spinner *ngIf="loading()" class="tree-viewer__loading"></app-spinner>
 
