--- a/src/app/features/tree-viewer/components/tree-selection-summary/tree-selection-summary.component.html
+++ b/src/app/features/tree-viewer/components/tree-selection-summary/tree-selection-summary.component.html
@@ -1,12 +1,14 @@
-<aside *ngIf="!isSelectionEmpty()" class="selection-display">
-  <h3 class="selection-display__title">
-    Selected item IDs: {{ selectedItemIds() }}
-  </h3>
+@if (selectedItemIdsString().length) {
+  <aside class="selection-display">
+    <h3 class="selection-display__title">
+      Selected item IDs: {{ selectedItemIdsString() }}
+    </h3>
 
-  <app-button
-    class="selection-display__button"
-    (buttonClick)="onClearSelection()"
-  >
-    Clear selection
-  </app-button>
-</aside>
+    <app-button
+      class="selection-display__button"
+      (buttonClick)="onClearSelection()"
+    >
+      Clear selection
+    </app-button>
+  </aside>
+}
