--- a/src/app/shared/components/checkbox/checkbox.component.html
+++ b/src/app/shared/components/checkbox/checkbox.component.html
@@ -14,7 +14,9 @@
     (change)="onCheckboxChange($event)"
   />
 
-  <label *ngIf="label()" class="checkbox__label" [for]="id()">
-    {{ label() }}
-  </label>
+  @if (label()) {
+    <label class="checkbox__label" [for]="id()">
+      {{ label() }}
+    </label>
+  }
 </fieldset>
