--- a/src/app/features/tree-viewer/components/tree-item/tree-item.component.html
+++ b/src/app/features/tree-viewer/components/tree-item/tree-item.component.html
@@ -1,10 +1,10 @@
 <section
-  [class]="`tree-item tree-item--level-${item().level + 1}`"
+  [class]="`tree-item tree-item--level-${item().level}`"
   (click)="onItemSelect()"
 >
   <app-checkbox
     class="tree-item__checkbox"
-    [id]="`item-${item().id}`"
+    [id]="item().id"
     [label]="item().title"
     [checked]="isSelected()"
     (checkedChange)="onItemSelect()"
