--- a/src/app/shared/components/message/message.component.html
+++ b/src/app/shared/components/message/message.component.html
@@ -1,4 +1,6 @@
 <section class="message" role="alert">
-  <h4 *ngIf="title()" class="message__title">{{ title() }}</h4>
+  @if (title()) {
+    <h4 class="message__title">{{ title() }}</h4>
+  }
   <ng-content></ng-content>
 </section>
